@@ -1,5 +1,11 @@
 2007-04-04  William Jon McCann  <mccann@jhu.edu>
 
+	* common/gdm-log.c: (gdm_log_init):
+	* daemon/misc.h:
+	Fix building on Solaris.
+
+2007-04-04  William Jon McCann  <mccann@jhu.edu>
+
 	* daemon/gdm-socket-protocol.h:  Oops add file
 	missing from last commit.
 
